# annotatorserver

./: .gitignore  CMakeLists.txt  annotatorserver-config.cmake
cmake/: CompileOptions.cmake
deploy/: CMakeLists.txt
docs/api-docs/: CMakeLists.txt  doxyfile.in
source/: CMakeLists.txt
source/annotatorserver/: CMakeLists.txt
source/annotatorserver/include/: FileHandler.h  RequestHandlerFactory.h  ResourceHandler.h  annotatorserver.h  imagehandler.h  mime.h
source/annotatorserver/include/api/: AnnotationsHandler.h  ApiHandler.h  UriParser.h
source/annotatorserver/resources/js/: annotator.js
source/annotatorserver/source/: FileHandler.cpp  Index.cpsp  RequestHandlerFactory.cpp  ResourceHandler.cpp  annotatorserver.cpp  imagehandler.cpp  mime.cpp
source/annotatorserver/source/api/: AnnotationsHandler.cpp  ApiHandler.cpp  UriParser.cpp
source/annotatorwebclient/: CMakeLists.txt  index.html  package.json
source/annotatorwebclient/app/: annotator.js  annotatorapi.js  app.component.js
